# claude-status-pet

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  README.md  README.zh-CN.md  THIRD-PARTY-NOTICES
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: release.md
.github/: copilot-instructions.md
.github/plugin/: marketplace.json
.github/prompts/: release.prompt.md
.github/workflows/: release.yml  test.yml
claude/.claude-plugin/: plugin.json
claude/skills/pet/: SKILL.md
copilot/: README.md  hooks.json  plugin.json  setup.sh  status-writer.js  status-writer.sh
copilot/scripts/: hook.ps1  hook.sh
copilot/skills/pet/: SKILL.md
dlc/: fluent-cat.json  fluent-emoji.json  fluent-penguin.json  gopher.json  kuromi.json  mona.json
docs/: CUSTOM-CHARACTERS.md  HOOKS.md  INSTALL.md  MANUAL-INSTALL.md  index.html  style.css
hooks/: hooks.json
pet-app/: package-lock.json  package.json
pet-app/src/: app.js  index.html  style.css
pet-app/src-tauri/: Cargo.toml  tauri.conf.json
pet-app/src-tauri/capabilities/: default.json
pet-app/src-tauri/icons/: icon.icns
pet-app/src-tauri/src/: lib.rs  main.rs  status_map.rs  tests.rs
pet-app/src-tauri/src/adapter/: claude.rs  copilot.rs  mod.rs  vscode.rs
pet-app/src/ferris/: character.json
scripts/: download-assets.js  download-assets.sh  download-gifs.js  download-gifs.sh  launch-pet.sh  open-pet.sh  status-writer.sh
skills/pet/: SKILL.md
vscode/: plugin.json
vscode/hooks/: hooks.json
vscode/skills/pet/: SKILL.md
