[package]
name = "claude-status-pet"
version = "0.5.3"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_System_WinRT"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
